# plan_reparametrizer

./: CMakeLists.txt  README.md  package.xml
scripts/: reparametrize.py  test_continue_plan.py
src/: continue_plan.cpp
srv/: ReparametrizePlan.srv  ReparametrizePlanPy.srv
