<?xml version="1.0"?>
<package>
  <name>plan_reparametrizer</name>
  <version>0.0.0</version>
  <description>The plan_reparametrizer package</description>

  <maintainer email="deepakparamkusam@gmail.com">deepak</maintainer>

  <license>TODO</license>

  <!-- Use build_depend for packages you need at compile time: -->
  <!-- Use run_depend for packages you need at runtime: -->
  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
